--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,10 @@
 
 body {
    font-family: 'Work Sans', sans-serif;
-   font-size: 15px;
+   font-size: 16px;
    font-weight: 400;
-   background: #000;
-   color: #FFFFFF;
+   background: #fff;
+   color: #000;
    
    @include hide-scrollbar();
 
@@ -16,10 +16,10 @@ body {
    }
 }
 
-::selection {
-   color: var(--main-color);
-   background: $selectionColor;
-}
+// ::selection {
+//    color: var(--main-color);
+//    background: $selectionColor;
+// }
 
 .container {
    max-width: $maxWidthContainer + px;
