filter form basis

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -29,9 +29,17 @@
 
 .create {
    padding: 8px 25px;
-   background: var(--main-color);
-   color: #fff;
    font-size: 18px;
+   color: #fff;
+   background: var(--main-color);
+   transition: var(--hover);
+
+   @media (any-hover: hover) {
+      &:hover {
+         background: var(--bright-main-color);
+         transition: var(--hover);
+      }
+   }
 }
 
 .avatar {
