--- a/src/components/common/body-blur/BodyBlur.module.scss
+++ b/src/components/common/body-blur/BodyBlur.module.scss
@@ -12,12 +12,12 @@
    justify-content: center;
    background: rgba(0, 0, 0, .4);
    @include hidden-element();
-   transition: var(--move);
+   transition: var(--side-move);
    
 
    &.blur {
       @include visible-element();
-      transition: var(--move);
+      transition: var(--side-move);
       z-index: 10000;
    }
 }
