--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,18 +14,11 @@ $selectionColor: rgba(40, 41, 43, 0.5);
 
 :root {
    --main-color: #2c2cdb;
-   --bright-main-color: #cf3ef3;
-   --secondary-color: #297bf5;
-   --black-grey: #222;
-   --dark-grey: #333;
-   --grey: #5c5c5c;
-   --bright-grey: #ccc;
-   --yellow: #fff310;
-   --green: #009e5a;
-
+   --bright-main-color: #3535ff;
    
    --hover: all 0.12s linear;
-   --move: all 0.2s ease-in-out;
+   --side-move: all 0.3s ease-out;
 
+   --grey: #6e717e;
    --light-grey: #9da2b4;
 }
