--- a/src/components/filters-form/FiltersForm.module.scss
+++ b/src/components/filters-form/FiltersForm.module.scss
@@ -1,15 +1,24 @@
 .body {
    position: fixed;
-   right: -100%;
-   top: 0;
-   height: 100vh;
    width: 450px;
+   height: 100vh;
    box-sizing: border-box;
    padding: 20px 30px;
    background: #fff;
    transition: var(--side-move);
+   overflow-y: auto;
+   padding-bottom: 70px; // height of button + padding
 
-   &.opened {
+   top: 0;
+   right: -100%;
+
+   .apply {
+      bottom: 0;
+      right: -100%;
+   }
+
+   &.opened,
+   &.opened .apply {
       right: 0;
       transition: var(--side-move);
    }
@@ -37,50 +46,41 @@
    }
 }
 
-.formLabel {
-   display: flex;
-   align-items: center;
-   gap: 10px;
-   margin: 0 -5px;
-   padding: 10px 5px;
-   margin-top: 20px;
-   transition: var(--hover);
+.filterField {
+   display: block;
+   margin-top: 1.3rem;
+   font-size: 20px;
+   font-weight: 500;
 
-   .labelName {
-      flex-grow: 1;
+   input:not(.filterCheckbox) {
+      display: block;
+      width: 100%;
+      font-size: 18px;
+      box-sizing: border-box;
+      padding: 5px 10px;
+      border: 1px solid var(--light-grey)
    }
 
-   @media (any-hover: hover) {
-      &:hover {
-         cursor: pointer;
-         background: rgba(0, 0, 0, .1);
-         transition: var(--hover);
+   &.filterCheckbox {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      input {
+         width: 25px;
+         height: 25px;
       }
    }
 }
 
-.labelName {
-   font-size: 20px;
-   margin-right: 5px;
-   font-weight: 500;
-}
-
-.selectedItems {
-   color: var(--grey);
-   font-size: 17px;
-   white-space: nowrap;
-   text-overflow: ellipsis;
-   overflow: hidden;
-}
-
 .apply {
-   position: absolute;
-   left: 0;
+   position: fixed;
+   right: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
-   width: 100%;
+   width: 450px;
    height: 50px;
    font-size: 22px;
    color: #fff;
@@ -93,25 +93,4 @@
          transition: var(--hover);
       }
    }
-}
-
-
-
-
-
-.selectionHeader {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-}
-
-.backToFilters {
-   display: flex;
-   align-items: center;
-   gap: 10px;
-}
-
-.resetCategories {
-   font-size: 18px;
-   color: var(--grey)
 }
