--- a/src/components/common/select-categories/SelectCategories.module.scss
+++ b/src/components/common/select-categories/SelectCategories.module.scss
@@ -74,6 +74,12 @@
    color: var(--grey)
 }
 
+.incentive {
+   margin-top: 15px;
+   color: var(--grey);
+   font-size: 18px;
+}
+
 .subHeading {
    font-size: 22px;
    margin-top: 1rem;
