base profile implementation

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,8 +13,8 @@ $maxWidthContainer: 1200;
 $selectionColor: rgba(40, 41, 43, 0.5);
 
 :root {
-   --main-color: #2c2cdb;
-   --bright-main-color: #3535ff;
+   --main-color: #981ed1;
+   --bright-main-color: #a730df;
    
    --hover: all 0.12s linear;
    --side-move: all 0.3s ease-out;
