--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -27,6 +27,21 @@
    }
 }
 
+.create {
+   padding: 8px 25px;
+   font-size: 18px;
+   color: #fff;
+   background: var(--main-color);
+   transition: var(--hover);
+
+   @media (any-hover: hover) {
+      &:hover {
+         background: var(--bright-main-color);
+         transition: var(--hover);
+      }
+   }
+}
+
 .avatar {
    width: 40px;
    height: 40px;
