--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,11 @@ body {
    }
 }
 
+textarea {
+   font-family: inherit;
+   font-size: inherit;
+}
+
 // ::selection {
 //    color: var(--main-color);
 //    background: $selectionColor;
@@ -25,6 +30,7 @@ body {
    max-width: $maxWidthContainer + px;
    margin: 0 auto;
    padding: 0 15px;
+   box-sizing: border-box;
 }
 
 .ibg {
@@ -39,6 +45,23 @@ body {
       width: 100%;
       height: 100%;
       object-fit: cover;
+   }
+}
+
+.greyOnInteract {
+   transition: var(--hover);
+
+   @media (any-hover: hover) {
+      &:hover {
+         cursor: pointer;
+         background: rgba(0, 0, 0, .1);
+         transition: var(--hover);
+      }
+   }
+
+   &:active {
+      background: rgba(0, 0, 0, .15);
+      transition: var(--hover);
    }
 }
 
