--- a/src/components/common/transition-skeleton/TransitionSkeleton.module.scss
+++ b/src/components/common/transition-skeleton/TransitionSkeleton.module.scss
@@ -1,16 +1,43 @@
+// .skeleton {
+//    animation: rectangle 2s ease-in infinite;
+
+//    & + & {
+//       margin-top: 10px;
+//    }
+// }
+
+// $transitionFrom: rgb(230, 238, 243);
+// $transitionTo: rgb(224, 227, 235);
+
+// @keyframes rectangle {
+//    0% {background: $transitionFrom;}
+//    30% {background: $transitionTo;}
+//    100% {background: $transitionFrom;}
+// }
+
+
+@import '../../../styles/variables';
+
 .skeleton {
-   animation: rectangle 2s ease-in infinite;
+   $skeletonColor: rgb(216, 218, 230);
+
+   background: 
+      linear-gradient(0.25turn, transparent, #fff, transparent),
+      linear-gradient($skeletonColor, $skeletonColor),
+      radial-gradient(38px circle at 19px 19px, $skeletonColor 50%, transparent 51%),
+      linear-gradient($skeletonColor, $skeletonColor);
+   background-repeat: no-repeat;
+   background-size: 315px 250px, 315px 180px, 100px 100px, 225px 30px; 
+   background-position: -315px 0, 0 0, 0px 190px, 50px 195px; 
+   animation: loading 1.5s infinite;
 
    & + & {
       margin-top: 10px;
    }
 }
 
-$transitionFrom: rgb(230, 238, 243);
-$transitionTo: rgb(224, 227, 235);
-
-@keyframes rectangle {
-   0% {background: $transitionFrom;}
-   30% {background: $transitionTo;}
-   100% {background: $transitionFrom;}
+@keyframes loading {  
+   to {
+      background-position: 315px 0, 0 0, 0 190px, 50px 195px;
+   }
 }
